--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6GHD89GRK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W6GHD89GRK');
+</script>
+    <meta name="google-site-verification" content="xTJ6rYqrtbNXlJPS7PHe3lg7U052Tx5sVcddKkOBmGk" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="La heladería favorita en Manacor, Mallorca. Disfruta de helados artesanales irresistibles. Ven y descúbrelos hoy.">
